bundled_metadata/force-app/main/default/objects/Sales_Summary__c/Sales_Summary__c.object-meta.xml
<CustomObject>
    <label>Sales Summary</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>