bundled_metadata/force-app/main/default/objects/Sales_Summary__c/fields/Previous_Quarter_Sales__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quarter_Sales__c</fullName>
    <label>Previous Quarter Sales​</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>